# gooroom-desktop-mode-switcher

./: README  configure.ac
debian/: changelog  control  copyright  gooroom-desktop-mode-switcher.pkla  install
po/: POTFILES.in  en_GB.po  ko.po
src/: Makefile.am  gooroom-desktop-mode-switcher.c  gooroom-screen-keyboard-toggler.c  main.c
